packages/preview/sprintf/0.1.0/.nim_runtime/tests/errmsgs/trecursiveproctype6.nim
discard """
  errormsg: "illegal recursion in type 'Test"
  line: 9
"""

# issue #18855

type
  TestProc = proc(a: Test)
  Test = Test
